changed filters to work with json

--- a/12_screeners.ipynb
+++ b/12_screeners.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 12.1 . Simulating screeners\n",
+    "In backtesting, we should be able to simulate what a screener would have given, else we would have to simulate all stocks simultaneously. Because this is a computationally expensive thing to do, the results are saved in the <code>processed/cache/</code> folder. There are of course some constraints to this. It should be technically possible to get the results from screeners, either online or via APIs (e.g. IBKR TWS). This means that intraday scanners are limited. For long-term screeners it does not matter because we can actually download everything after the end of the trading day."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,38 +20,24 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
+    "import json\n",
     "import pyarrow as pa\n",
     "import pyarrow.parquet as pq\n",
     "import ast\n",
-    "DATA_PATH = \"../../../data/polygon/\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1. Simulating screeners\n",
-    "In backtesting, we should be able to simulate what a screener would have given, else we would have to simulate all stocks simultaneously. Because this is a computationally expensive thing to do, the results are saved in the <code>processed/cache/</code> folder. There are of course some constraints to this. It should be technically possible to get the results from screeners, either online or via APIs (e.g. IBKR TWS). This means that intraday scanners are limited. For long-term screeners it does not matter because we can actually download everything after the end of the trading day."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A function for calculating the most liquid N non-ADR stocks. This is to simulate the Russell or S&P indices. Of course there will be differences, but I care more about liquidity than whether it is precisely in an index or not."
+    "DATA_PATH = \"../data/polygon/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_top_n_liquid(n=3000, start = date(2000, 1, 1), end = date(2100, 1, 1)):\n",
+    "def store_top_n_liquid(n=500, start = date(2000, 1, 1), end = date(2100, 1, 1)):\n",
     "    tickers = get_tickers()\n",
     "    tickers = tickers[tickers['type'] == \"CS\"]\n",
-    "    data = pd.DataFrame(index=get_market_dates())\n",
-    "    IDs = []\n",
+    "\n",
+    "    dates_and_IDs = {} # {'2022-01-01': ['AAPL', 'MSFT', ...], '2022-04-01': ['NVDA', 'AMD', ...], ...}\n",
     "\n",
     "    quarterly_all = pd.DataFrame()\n",
     "    for index, id in enumerate(tickers['ID']):\n",
@@ -56,59 +50,56 @@
     "        #print(index)\n",
     "        \n",
     "        # Avoids defragmentation, increasing performance. Without this it would take more than 4x longer.\n",
-    "        if index % 100 == 0:\n",
+    "        if index % 100 == 0 and index != 0:\n",
     "            quarterly_all = quarterly_all.copy()\n",
+    "            print(index)\n",
     "\n",
-    "    for _, row in quarterly_all.copy().iterrows():\n",
-    "        IDs.append(row[row.notna()].nlargest(n).index.tolist()) # Calculate largest N stocks, append to 'IDs'\n",
-    "        \n",
-    "    quarterly_all['IDs'] = IDs\n",
-    "    quarterly_all = quarterly_all[['IDs']] # Get only the IDs\n",
-    "    quarterly.index = quarterly.index + timedelta(days=1) # Get first day of new month to avoid look-ahead bias\n",
-    "    quarterly.index = map(first_trading_date_after_equal, quarterly.index.date) # Get first trading day of new month\n",
+    "    # Store results in dates_and_IDs\n",
+    "    for datetime_, row in quarterly_all.copy().iterrows():\n",
+    "        top_n_stocks = row[row.notna()].nlargest(n).index.tolist()\n",
+    "        next_trading_date = first_trading_date_after_equal(datetime_.to_pydatetime().date() + timedelta(days=1))\n",
+    "        dates_and_IDs[next_trading_date.isoformat()] = top_n_stocks\n",
     "\n",
-    "    data = data.merge(quarterly_all, how='left', left_index=True, right_index=True) # Convert to daily\n",
-    "    data = data.fillna(method='ffill')\n",
-    "    data.index = pd.to_datetime(data.index)\n",
-    "\n",
-    "    data.to_csv(DATA_PATH + f'processed/cache/top_{n}_liquid.csv')\n",
+    "    # Store to json (csv is not a convenient format to store variable length lists)\n",
+    "    with open(DATA_PATH + f'processed/cache/top_{n}_liquid.json', 'w') as f: \n",
+    "        json.dump(dates_and_IDs, f)\n",
     "    return\n",
     "\n",
-    "def get_top_n_liquid(day, n=3000):\n",
-    "    if os.path.isfile(DATA_PATH + f'processed/cache/top_{n}_liquid.csv'):\n",
-    "        data = pd.read_csv(DATA_PATH + f'processed/cache/top_{n}_liquid.csv', index_col=0)\n",
-    "        data.index = pd.to_datetime(data.index).date\n",
-    "        if data.index[-1] < day:\n",
-    "            data = calculate_top_n_liquid(n)\n",
-    "    else:\n",
-    "        calculate_top_n_liquid(n)\n",
-    "        data = pd.read_csv(DATA_PATH + f'processed/cache/top_{n}_liquid.csv', index_col=0)\n",
-    "        data.index = pd.to_datetime(data.index).date\n",
-    "    \n",
-    "    return ast.literal_eval(data.loc[day, 'IDs'])"
+    "def get_top_n_liquid(day, n=500):\n",
+    "    if not os.path.isfile(DATA_PATH + f'processed/cache/top_{n}_liquid.json'):\n",
+    "        store_top_n_liquid(n)\n",
+    "        \n",
+    "    with open(DATA_PATH + f'processed/cache/top_{n}_liquid.json', 'r') as f:\n",
+    "        data = json.load(f)\n",
+    "\n",
+    "    dates = list(data.keys())\n",
+    "    date_to_query = max(list(filter(lambda x: x <= day.isoformat(), dates)) )\n",
+    "    return date_to_query, data[date_to_query]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2023-07-03\n",
       "['TSLA-2019-01-01', 'NVDA-2019-01-01', 'AAPL-2019-01-01', 'MSFT-2019-01-01', 'AMD-2019-01-01']\n"
      ]
     }
    ],
    "source": [
-    "data = get_top_n_liquid(date(2023, 8, 25), n=500)\n",
+    "date_, data = get_top_n_liquid(date(2023, 8, 25), n=100)\n",
+    "print(date_)\n",
     "print(data[:5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
