Added function to get top movers

--- a/02_market_hours.ipynb
+++ b/02_market_hours.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
     "    \"\"\"Gets first trading day after or equal to input date. Return the input if out of range.\n",
     "\n",
     "    Args:\n",
-    "        dt (Date): Date object to compare\n",
+    "        dt (Date): Date object to compare. Can be a non-trading date.\n",
     "\n",
     "    Returns:\n",
     "        Date: the trading date\n",
@@ -357,7 +357,7 @@
     "    \"\"\"Gets last trading day before or equal to input date. Return the input if out of range.\n",
     "\n",
     "    Args:\n",
-    "        dt (Date): Date object to compare\n",
+    "        dt (Date): Date object to compare. Can be a non-trading date.\n",
     "\n",
     "    Returns:\n",
     "        Date: the trading date\n",
@@ -368,7 +368,33 @@
     "        return dt\n",
     "    while dt not in trading_days:\n",
     "        dt = dt - timedelta(days=1)\n",
-    "    return dt"
+    "    return dt\n",
+    "\n",
+    "def first_trading_date_after(day):\n",
+    "    \"\"\"Gets first trading date after the specified trading date.\n",
+    "\n",
+    "    Args:\n",
+    "        day (date): MUST be a trading date\n",
+    "    \n",
+    "    Returns:\n",
+    "        date: the next trading date\n",
+    "    \"\"\"\n",
+    "    trading_days = get_market_dates()\n",
+    "    return trading_days[trading_days.index(day) + 1]\n",
+    "\n",
+    "\n",
+    "def last_trading_date_before(day):\n",
+    "    \"\"\"Gets last trading date before the specified trading date.\n",
+    "\n",
+    "    Args:\n",
+    "        day (date): MUST be a trading date\n",
+    "    \n",
+    "    Returns:\n",
+    "        date: the previous trading date\n",
+    "    \"\"\"\n",
+    "    trading_days = get_market_dates()\n",
+    "    return trading_days[trading_days.index(day) - 1]\n",
+    "    "
    ]
   },
   {
