--- a/13_backtesting.ipynb
+++ b/13_backtesting.ipynb
@@ -4,7 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 13.1 Backtesting\n"
+    "# 13.1 Backtesting\n",
+    "I will try out a popular strategy using the IBS indicator. I want to see if I can match the results on [here](https://www.quantifiedstrategies.com/internal-bar-strength-ibs-indicator-strategy/). I will also use pure pandas.\n",
+    "\n",
+    "* Universe: SPY ETF\n",
+    "* Entry: IBS < 0.2\n",
+    "* Exit: IBS > 0.8\n",
+    "* Trading on close prices.\n",
+    "\n",
+    "Although it is possible to get the exact closing price using market-on-close orders, you cannot know the value of the IBS at market close. So as an extension I will look at how the strategy has performed if the IBS is calculated using daily bars exluding the last minute."
    ]
   },
   {
