--- a/09_renamings.ipynb
+++ b/09_renamings.ipynb
@@ -17,7 +17,7 @@
     "        * If it does:\n",
     "            * The stock data will be merged.\n",
     "            * In <code>tickers_v4.csv</code> we will change \"ticker\" to the new ticker and add a list [date, ticker] to \"tickers_old\".\n",
-    "            * All other rows will be merged such as \"start_date\". For identifiers such as FIGI we will take the last available value. For the ID we will use the new ticker with the combined start_date. So this means that in our <code>processed/m1/</code> folder there will be all tickers including merged ones. So the old FB, the old META and the merged FB+META named <code>META-yyyy-mm-dd.csv</code> will be in the same folder. You could delete the old FB and META but I keep them for debugging purposes.\n",
+    "            * All other rows will be merged such as \"start_date\". For identifiers such as FIGI we will take the last available value. For the ID we will keep the original. If we do not do this, we might run into problems with identical IDs.\n",
     "            * The row of the old ticker will be deleted\n",
     "            * **We need to restart the loop!** If we don't the following can happen: Let's assume that a ticker was renamed from A -> B -> C -> D but that the order in which it appears in our ticker list is C, D, A, B. Using our loop, C gets merged with D. Then the loop checks D, which has no renamings. Then A gets merged with B. Then B gets merged with C, however that is incorrect! B should be merged with the new D, which contains C. Any double+ renamings have the risk of being in the 'wrong order'.\n",
     "\n",
@@ -84,8 +84,6 @@
     "            continue\n",
     "        index_to = row_to.index[0]\n",
     "        id_to = row_to['ID'].values[0]\n",
-    "        new_id = ticker_to + \"-\" + start_date_from.isoformat()\n",
-    "        tickers_v4.loc[index_to, \"ID\"] = new_id\n",
     "        tickers_v4.loc[index_to, \"tickers_old\"].append([start_data_to.isoformat(), ticker_from])\n",
     "        tickers_v4.loc[index_to, \"start_date\"] = start_date_from\n",
     "        tickers_v4.loc[index_to, \"start_data\"] = start_data_from\n",
@@ -145,8 +143,7 @@
     "        # pd.concat([from_, to]).to_parquet(DATA_PATH + f\"processed/m1/{new_id}.parquet\", engine=\"pyarrow\", compression = 'brotli', row_group_size = 25000)\n",
     "\n",
     "        # Delete old ticker from ticker list. You can also remove the files, but that is not necessary. In backtesting you will always loop over the ticker list and not over de files in the folder.\n",
-    "        # os.remove(path = DATA_PATH + f\"processed/m1/{id_from}.parquet\") # Removal of old renamed ticker (not necessary)\n",
-    "        # os.remove(path = DATA_PATH + f\"processed/m1/{id_to}.parquet\") # Remove of new ticker (not necessary)\n",
+    "        os.remove(path = DATA_PATH + f\"processed/m1/{id_from}.parquet\") # Removal of old renamed ticker (not necessary)\n",
     "        tickers_v4.drop(index_from, inplace=True)\n",
     "        tickers_v4.reset_index(inplace=True, drop=True)\n",
     "        print(f\"Ticker change {ticker_from} -> {ticker_to} on {start_data_to} has been processed\")\n",
