--- a/12_screeners.ipynb
+++ b/12_screeners.ipynb
@@ -140,8 +140,8 @@
     "    This is done for every day and specified time. \n",
     "\n",
     "    Args:\n",
-    "        sign (string): either '+' or '-' for higher or lower\n",
-    "        percentage (int): the percentage threshold\n",
+    "        sign (string): either '+' or '-' for winners or losers\n",
+    "        percentage (float/int): the percentage threshold\n",
     "        time_ (time): the time to calculate the change each day\n",
     "        start (date, optional): the start date. Defaults to date(2000, 1, 1).\n",
     "        end (date, optional): the end date. Defaults to date(2100, 1, 1).\n",
@@ -192,27 +192,10 @@
     "            print(index)\n",
     "\n",
     "    # Store to json\n",
-    "    with open(DATA_PATH + f'processed/cache/gainers_p{percentage}{sign}_t{time_.strftime(\"%H%M\")}.json', 'w') as f: \n",
+    "    with open(DATA_PATH + f'processed/cache/movers_p{percentage}{sign}_t{time_.strftime(\"%H%M\")}.json', 'w') as f: \n",
     "        json.dump(dates_and_IDs, f)\n",
     "\n",
     "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "store_top_movers(sign = '+', percentage = 20, time_ = time(16, 29), start = date(2019, 1, 1), end = date(2023, 9, 1))"
    ]
   },
   {
@@ -221,53 +204,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "store_top_movers(sign = '-', percentage = 20, time_ = time(16, 29), start = date(2019, 1, 1), end = date(2023, 9, 1))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Should always keep original ID."
+    "store_top_movers(sign = '+', percentage = 20, time_ = time(16, 29), start = date(2019, 1, 1), end = date(2023, 9, 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
-    "start = date(2019, 1, 1)\n",
-    "end = date(2023, 9, 1)\n",
+    "def store_top_intraday_movers(sign, percentage, time_, start = date(2000, 1, 1), end = date(2100, 1, 1)):\n",
+    "    \"\"\"Store the top intraday gainers/losers (compared to daily open) if percentage is above threshold in processed/cache/gainers_{sign}p{percentage}_t{time}.json\n",
+    "    This is done for every day and specified time. \n",
     "\n",
-    "id = 'PRDO-2019-01-01'\n",
-    "daily = get_data(id, columns=['close'], start=start, end=end)\n",
-    "daily['prev_close'] = daily['close'].shift(1)\n",
-    "minute = get_data(id, timeframe=1, columns=['close'], start=start, end=end)\n",
-    "minute.rename(columns={'close': 'close_at_time'}, inplace=True)\n",
+    "    Args:\n",
+    "        sign (string): either '+' or '-' for winners or losers\n",
+    "        percentage (float/int): the percentage threshold\n",
+    "        time_ (time): the time to calculate the change each day\n",
+    "        start (date, optional): the start date. Defaults to date(2000, 1, 1).\n",
+    "        end (date, optional): the end date. Defaults to date(2100, 1, 1).\n",
+    "    \"\"\"\n",
+    "    tickers = get_tickers()\n",
+    "    tickers = tickers[tickers['type'].isin(['CS', 'ADRC'])]\n",
     "\n",
-    "data = minute.between_time(time(17, 59), time(17, 59))\n",
-    "data.index = pd.DatetimeIndex(data.index).normalize() # Remove the 'time' part, which mean setting at 00:00 in order to merge with daily data"
+    "    dates = get_market_dates()\n",
+    "    dates = [day for day in dates if (day >= start and day <= end)] # Filter dates\n",
+    "    dates_and_IDs = {day.isoformat(): list() for day in dates} # Create dictionary with empty lists\n",
+    "\n",
+    "    for index, row in tickers.iterrows():\n",
+    "        id = row['ID']\n",
+    "        daily = get_data(id, columns=['open'], start=start, end=end)\n",
+    "        minute = get_data(id, timeframe=1, columns=['close'], start=start, end=end)\n",
+    "        minute.rename(columns={'close': 'close_at_time'}, inplace=True)\n",
+    "\n",
+    "        # If there is no data between the start and end date, skip the ticker\n",
+    "        if daily.empty or minute.empty:\n",
+    "            continue\n",
+    "\n",
+    "        # TO REMOVE\n",
+    "        minute = minute[~minute.index.duplicated()]\n",
+    "        daily = daily[~daily.index.duplicated()]\n",
+    "\n",
+    "        # Build our data for this ticker\n",
+    "        data = minute.between_time(time_, time_)\n",
+    "        data.index = pd.DatetimeIndex(data.index).normalize() # Remove the 'time' part, which mean setting at 00:00 in order to merge with daily data\n",
+    "\n",
+    "        data = pd.concat([data, daily[['open']]], axis=1)\n",
+    "        data['change'] = 100*(data['close_at_time'] / data['open'] - 1)\n",
+    "\n",
+    "        # Select the dates that had a change higher/lower than the threshold\n",
+    "        if sign == '+':\n",
+    "            mover_dates = data[data.change > percentage].index\n",
+    "        elif sign == '-':\n",
+    "            mover_dates = data[data.change < percentage].index\n",
+    "\n",
+    "        mover_dates = pd.to_datetime(mover_dates).date\n",
+    "\n",
+    "        # Put it in the dictionary\n",
+    "        for day in mover_dates:\n",
+    "            dates_and_IDs[day.isoformat()].append(id)\n",
+    "        \n",
+    "        # For timing\n",
+    "        if index % 250 == 0:\n",
+    "            print(index)\n",
+    "\n",
+    "    # Store to json\n",
+    "    with open(DATA_PATH + f'processed/cache/movers_intraday_p{percentage}{sign}_t{time_.strftime(\"%H%M\")}.json', 'w') as f: \n",
+    "        json.dump(dates_and_IDs, f)\n",
+    "\n",
+    "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False, False, False, ...,  True,  True,  True])"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.index.duplicated()"
+    "store_top_intraday_movers(sign = '+', percentage = 20, time_ = time(15, 55), start = date(2019, 1, 1), end = date(2023, 9, 1))"
    ]
   }
  ],
