added tradelog/filllog and statistics

--- a/x_debugging.ipynb
+++ b/x_debugging.ipynb
@@ -68,6 +68,45 @@
     "    m1.to_parquet(DATA_PATH + f\"raw/m1/{id}.parquet\", engine=\"fastparquet\", compression=\"snappy\", row_group_offsets=25000)\n",
     "    print(id)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplot_mosaic([['upper left', 'right'],\n",
+    "                               ['upper left', 'right'],\n",
+    "                               ['mid left', 'right'],\n",
+    "                               ['lower left', 'right']],\n",
+    "                              figsize=(7, 5), layout=\"constrained\", gridspec_kw={'width_ratios': [1.6, 1]})\n",
+    "axs['upper left'].plot(daily.index, daily[\"cumulative_return\"]*100, color=\"midnightblue\", linewidth=1)\n",
+    "axs['upper left'].yaxis.set_major_formatter(mtick.PercentFormatter(decimals=0))\n",
+    "axs['upper left'].set_title('Total return', fontsize=10, fontweight='bold')\n",
+    "\n",
+    "# Drawdown\n",
+    "axs['mid left'].plot(drawdowns.index, drawdowns*100, color=\"firebrick\", linewidth=1)\n",
+    "axs['mid left'].yaxis.set_major_formatter(mtick.PercentFormatter(decimals=0))\n",
+    "axs['mid left'].set_title('Drawdown', fontsize=10, fontweight='bold')\n",
+    "\n",
+    "# Monthly returns\n",
+    "monthly_return = daily['return'].resample('1M').sum()\n",
+    "colors = ['firebrick' if ret < 0 else 'g' for ret in monthly_return]\n",
+    "monthly_return_index = monthly_return.index.values\n",
+    "monthly_return_index[0] = daily.index[0] # To make the x-axis align\n",
+    "monthly_return_index[-1] = daily.index[-1] # To make the x-axis align\n",
+    "\n",
+    "axs['lower left'].bar(monthly_return.index, monthly_return.values*100, width=15, color=colors)\n",
+    "axs['lower left'].yaxis.set_major_formatter(mtick.PercentFormatter(decimals=0))\n",
+    "axs['lower left'].set_title('Monthly returns', fontsize=10, fontweight='bold')\n",
+    "\n",
+    "# Statistics\n",
+    "rows = ['Annual return', 'Sharpe', 'Sortina', 'Alpha', 'Beta', 'Average profit/trade']\n",
+    "data = ['1', '2', '3', '4', '5', '6']\n",
+    "axs['right'].table(cellText=data, rowLabels=rows, loc='upper center', edges='open', colWidths=[1])\n",
+    "#axs['right'].set_title('Statistics', fontsize=10, fontweight='bold')\n",
+    "axs['right'].axis(\"off\")"
+   ]
   }
  ],
  "metadata": {
