--- a/13_backtesting.ipynb
+++ b/13_backtesting.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "2019-01-04                    0.034162      10341.621267  "
       ]
      },
-     "execution_count": 156,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "2023-09-07                    1.783767      27837.672575  "
       ]
      },
-     "execution_count": 157,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "Text(0.5, 1.0, 'IBS strategy')"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "(0.0, 0.48)"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
        "2019-02-28  258.645369          1.0"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +691,7 @@
        " ('2019-03-22', [1.0, 260.45, '2019-03-29', 1.0, 263.59, nan])]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
        "2019-03-22     1.0    260.45  2019-03-29      1.0     263.59    3.14"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
        "584"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,29 +844,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'float' object has no attribute 'seconds'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Nathan\\Desktop\\Algotrading\\Research & Development\\data_import\\13_backtesting.ipynb Cell 30\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Desktop/Algotrading/Research%20%26%20Development/data_import/13_backtesting.ipynb#X64sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m average_time_in_trade \u001b[39m=\u001b[39m \u001b[39mround\u001b[39m((time_in_market\u001b[39m/\u001b[39;49m\u001b[39mlen\u001b[39;49m(trade_log))\u001b[39m.\u001b[39;49mseconds \u001b[39m/\u001b[39m (\u001b[39m60\u001b[39m\u001b[39m*\u001b[39m\u001b[39m24\u001b[39m)\u001b[39m/\u001b[39m\u001b[39m24\u001b[39m, \u001b[39m1\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Nathan/Desktop/Algotrading/Research%20%26%20Development/data_import/13_backtesting.ipynb#X64sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m average_time_in_trade\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'float' object has no attribute 'seconds'"
-     ]
+     "data": {
+      "text/plain": [
+       "3.9"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "average_time_in_trade = round((time_in_market/len(trade_log)).seconds / (60*24)/24, 1)\n",
+    "average_time_in_trade = round(time_in_market/len(trade_log), 1)\n",
     "average_time_in_trade"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +874,7 @@
        "108.02"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +905,7 @@
        "2.29"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +926,7 @@
        "297"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +947,7 @@
        "5.2"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +969,7 @@
        "1.02"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +992,7 @@
        "0.7"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1014,7 @@
        "0.7"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -1049,13 +1048,13 @@
        " 'Winning months': 0.7,\n",
        " 'Exposure': 584,\n",
        " 'Average profit': 2.29,\n",
-       " 'Average time/trade': 2.4,\n",
+       " 'Average time/trade': 3.9,\n",
        " 'Profit factor': 1.02,\n",
        " 'Winrate': 0.7,\n",
        " 'Trades/month': 5.2}"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -1126,6 +1125,13 @@
     "ax3.set_title('Monthly returns', fontsize=10, fontweight='bold')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TO DO: Add the close_original back to the data. Rerun everything."
    ]
   },
   {
